--- a/styles/index.css
+++ b/styles/index.css
@@ -58,7 +58,7 @@ strong {
     bottom: 100px;
     right: 20px;
     color: black;
-    max-width: 20vw;
+    max-width: 250px;
     box-shadow:0 10px 20px rgba(0,0,0,.2);
     background: white;
     border-radius: 8px;
